More simple logout.htm

--- a/logout.htm
+++ b/logout.htm
@@ -1,10 +1,5 @@
-<!DOCTYPE HTML>
-<html>
-<head>
 <style>
 div.logout{background-color:#FFF6BF;text-align:center;height:80px;line-height:80px;border-top:2px solid #FFD324;border-bottom:2px solid #FFD324;font-size:18px}
 span.title{font-size:28px;text-transform:uppercase;display:block;}
 </style>
-</head>
-<body><div class="logout"><span class="title">Logged out</span>You are logged out</div></body>
-</html>
+<div class="logout"><span class="title">Logged out</span>You are logged out</div>
