Add 'replaceOrigin()' function to support https/http protocol change.

--- a/update.htm
+++ b/update.htm
@@ -34,6 +34,10 @@ function replaceName(name) {
   if (x) enablePage.href = enablePage.href.substring(0,x+5) + name;
 }
 
+function replaceOrigin(origin) {
+  enablePage=origin+enablePage.pathname;
+}
+
 function addLog(logLine) {
   document.body.innerHTML += logLine;
   window.scrollTo(0,document.body.scrollHeight);
