--- a/update.htm
+++ b/update.htm
@@ -23,7 +23,9 @@ src:url('/webGui/styles/clear-sans-bold-italic.eot');src:url('/webGui/styles/cle
 font-family:'bitstream';font-weight:normal;font-style:normal;
 src:url('/webGui/styles/bitstream.eot');src:url('/webGui/styles/bitstream.eot?#iefix') format('embedded-opentype'),url('/webGui/styles/bitstream.woff') format('woff'),url('/webGui/styles/bitstream.ttf') format('truetype'),url('/webGui/styles/bitstream.svg#bitstream') format('svg');
 }
-.logLine{font-family:bitstream;font-size:12px;color:#808080;margin:0 8px;padding:0}
+html{font-family:clear-sans;font-size:62.5%;height:100%}
+body{font-size:1.3rem;color:#1c1c1c;background:#f2f2f2;padding:0;margin:0;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}
+.logLine{font-family:bitstream;font-size:1.2rem;margin:0 8px;padding:0}
 .logLine.spacing{margin:10px;}
 </style>
 <script>
